--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Vite + React</title>
   </head>
   <body>
-    <div id="root" class="w-full h-full"></div>
+    <div id="root" class="w-full h-full bg-[#1e1e1e]"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
